--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-split": "^2.0.14",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
