--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-split": "^2.0.14",
+    "redux-deep-persist": "^1.0.7",
+    "redux-persist": "^6.0.0",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
