--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
   },
+  "homepage": ".",
   "keywords": [],
   "author": "",
   "license": "ISC",
