--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^18.2.0",
     "react-split": "^2.0.14",
     "redux-deep-persist": "^1.0.7",
-    "redux-persist": "^6.0.0",
-    "showdown": "^2.1.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
@@ -30,6 +29,7 @@
     "html-webpack-plugin": "^5.5.3",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "showdown": "^2.1.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
