--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "react-redux": "^8.1.3",
+    "react-showdown": "^2.3.1",
     "redux": "^4.2.1",
-    "showdown": "^2.1.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
